<resources xmlns:tools="http://schemas.android.com/tools">
  <string name="app_name">NFood Merchant</string>
  <string name="location_could_not_be_found">Location could not be found</string>
  <string name="order">Order</string>
  <string name="payment">Payment</string>
  <string name="inbox">Inbox</string>
  <string name="mapbox_access_token">pk.eyJ1IjoibmdxdW9jaHV5ZGwyMyIsImEiOiJja2o4ODJ6OXIwdWVwMnlwNWxwYzMxcGRnIn0.DKCIKUuCwHu7aGNulakUCw</string>
  <string name="notification">Notification</string>
  <string name="more">More</string>
  <string name="setting">Settings</string>
  <string name="language_setting">Language Setting</string>
  <string name="notification_setting">Notification Setting</string>
  <string name="order_detail">Order Detail</string>
  <string name="hello_blank_fragment">Hello blank fragment</string>
  <string name="menu_management">Menu Management</string>
  <string name="setup_menu">Setup Menu</string>
  <string name="add_new_food">Add New Food</string>
  <string name="edit_food">Edit Food</string>
  <string name="add_new_category">Add New Category</string>
  <string name="edit_category">Edit Category</string>
  <string name="create_option_group">Create Option Group</string>
  <string name="add_new_option">Add New Option</string>
  <string name="review_food">Review Food</string>
  <string name="create_category">Create Category</string>
  <string name="save_change">Save Changes</string>
  <string name="promotion">Promotion</string>
  <string name="employee">Employee</string>
  <string name="academy">Academy</string>
  <string name="store_setting">Store Settings</string>
  <string name="sign_out">Sign Out</string>
  <string name="advertisement">Ads</string>
  <string name="create_promotion">Create Promotion</string>
  <string name="restaurant_address">Restaurant Address</string>
  <string name="sub_title_push_notification_setting">Highly recommend to keep it on, so that you will  be notified for all order status updates</string>
  <string name="sub_title_promotion_setting">Notify me when there are promotions in the selected province/city</string>
  <string name="message_select_image_food">Items with high quanlity photos are often more popular. Maximim 2 MB. Accepted file types : PNG, JPG</string>
  <string name="suggest_promotion_title">Suggest Promotion for you</string>
  <string name="suggest_promotion_subtitle">Let\'s join our recommended promotional packages to increase sales</string>
  <string name="select_type_promotion_title">Select Type Promotion</string>
  <string name="create_promotion_step_1">Create Promotion Step 1</string>
  <string name="create_promotion_step_2">Create Promotion Step 2</string>
  <string name="create_promotion_step_3">Create Promotion Step 3</string>
  <string name="promotion_period_title">Promotion Period</string>
  <string name="promotion_period_subtile">What\'s the promotion period ?</string>
  <string name="select_date_and_time">Select date and time</string>
  <string name="customers_criteria_title">Customers Criteria</string>
  <string name="customers_criteria_subtile">Everyone</string>
  <string name="everyone">Everyone</string>
  <string name="all_customer">All new customers will see this promotion</string>
  <string name="new_customer_title">New Customer</string>
  <string name="new_customer_subtitle">Only customers who have never ordered from your restaurant will see this promotion</string>
  <string name="number_of_redemptions_title">Maximum Number Of Redemptions</string>
  <string name="number_of_redemptions_subtitle">The promotion will end once number of redemptions jave reached this limit</string>
  <string name="see_restaurant_information">See Restaurant Information</string>
  <string name="work_time">Work time</string>
  <string name="business_hours">Business hours</string>
  <string name="set_opening_hours_and_future_closing_hours">Set opening hours and future closing hours</string>
  <string name="store_status">Store status</string>
  <string name="status">Status</string>
  <string name="set_current_status_of_store">Set current status of store</string>
  <string name="employee_management">Employee Management</string>
  <string name="sound">Sound</string>
  <string name="select_sound">Select sound</string>
  <string name="new_order_alert_title">New order alert</string>
  <string name="new_order_alert_subtitle">Pick an alert sound for new orders</string>
  <string name="new_order_alert">New order alert</string>
  <string name="push_notifications_title">Push notifications</string>
  <string name="push_notifications_subtitle">Choose which push notifications to receiveo on your phone</string>
  <string name="language">Language</string>
  <string name="language_subtitle">Set up language for your app</string>
  <string name="auto_accept_order">Auto accept order</string>
  <string name="set_auto_accept_order">Set auto accept order</string>
  <string name="confirm">Confirm</string>
  <string name="busy">Busy</string>
  <string name="paused">Paused</string>
  <string name="need_more_time_to_prepare">Need more time to prepare</string>
  <string name="how_long_do_you_want_to_stop_incoming_orders_for">How long do you want to stop incoming orders for ?</string>
  <string name="driver_information">Driver Information</string>
  <string name="customer_information">Customer Information</string>
  <string name="cancel_order">Cancel Order</string>
  <string name="order_summary">Order Summary</string>
  <string name="subtotal">Subtotal</string>
  <string name="total">Total</string>
  <string name="tracking_driver">Tracking Driver</string>
  <string name="print">Print</string>
  <string name="opening_hours">Opening hours</string>
  <string name="special_hours">Special Hours</string>
  <string name="report">Report</string>
  <string name="option_groups">Option Groups</string>
  <string name="out_of_stock">Out of stock</string>
  <string name="all">All</string>
  <string name="item_performance">Item performance</string>
  <string name="here_is_your_daily_statistic">Here is your daily statistic</string>
  <string name="completed_order">Completed Order</string>
  <string name="cancelled_order">Cancelled order</string>
  <string name="total_sales">Total Sales</string>
  <string name="daily_trending_menus">Daily Trending Menus</string>
  <string name="most_favourites_items">Most Favourites Items</string>
  <string name="opens">Opens</string>
  <string name="closes">Closes</string>
  <string name="edit_opening_hours">Edit Opening Hours</string>
  <string name="proof_menu_title">Upload a Photo of your In-Store Menu</string>
  <string name="proof_menu_subtitle">We need a photo of your menu with this item\'s name price as a proof of menu changes</string>
  <string name="proof_menu_change">Proof Menu Change</string>
  <string name="upload_photo_and_add_item">Upload Photo and Add Item</string>
  <string name="edit_profile">Edit Profile</string>
  <string name="contract">Contract</string>
  <string name="email">Email</string>
  <string name="bank_account_information">Bank Account Information</string>
  <string name="update_information">Update Information</string>
  <string name="change_avatar_image">Change Avatar Image</string>
  <string name="change">Change</string>
  <string name="change_cover_image">Change Cover Image</string>
  <string name="change_restaurant_information">Change Restaurant Information</string>
  <string name="restaurant_name">Restaurant Name</string>
  <string name="edit_restaurant_information">Edit Restaurant Information</string>
  <string name="select_address_on_map">Select Address On Map</string>
  <string name="edit">Edit</string>
  <string name="select_location_on_map">Select Location On Map</string>
  <string name="confirm_location">Confirm Location</string>
  <string name="enter_option_group_name">Enter option group name*</string>
  <string name="e_g_toppings_sizes_sugar_levels">e.g Toppings, Sizes, Sugar levels</string>
  <string name="add">Add</string>
  <string name="option">Option</string>
  <string name="e_g_jelly_large_50_sugar">E.g jelly, large, 50% Sugar</string>
  <string name="option_details">Option details</string>
  <string name="e_g_must_choose_at_least_1_option_optional">E.g must choose at least 1 option, optional</string>
  <string name="is_it_required_to_choose_an_option">Is it required to choose an option ?</string>
  <string name="yes_it_s_required">Yes, it\'s required</string>
  <string name="no_it_s_optional">No, it\'s optional</string>
  <string name="how_many_options_can_a_customer_choose">How many options can a customer choose ?</string>
  <string name="_1_option">1 Option</string>
  <string name="multiple_options">Multiple options</string>
  <string name="create_option_groups">Create option groups</string>
  <string name="create">Create</string>
  <string name="add_an_item_or_category">Add an item or category</string>
  <string name="next">Next</string>
  <string name="this_is_how_the_item_would_be_shown_to_customers">This is how the item would be shown to customers.</string>
  <string name="review_the_item_details_below">Review the Item Details Below</string>
  <string name="terms_and_conditions">Terms and conditions</string>
  <string name="promotion_discription_content">
    - Valid from Jan 20\n- Discount borne by NFood Partners\n\nAdvantages :\n
    - A special 5% subsidy from NFood (In the form of discount delivery vouchers and calculated from amount of discount given).\n
    - Subsidies will be given to NFood consumers after the promo ends on 31 Jan, 2020.\n
    - Will eppear in various NFood media
  </string>
  <string name="promotion_discription">Promotion Discription</string>
  <string name="create_menu_discounts">Create Menu Discounts</string>
  <string name="give_a_discount_on_one_menu_to_increase">Give a discount on one menu to increase the volume of your restaurant transactions.</string>
  <string name="create_a_total_shopping_discount">Create a total shopping discount</string>
  <string name="give_a_discount_with_minimum_terms_purchases_to_increase_the_average_purchases_value_of_your_customers">Give a discount with minimum terms. Purchases to increase the average purchases value of your customers</string>
  <string name="create_postage_discounts">Create postage discounts</string>
  <string name="to_lure_customers_who_want_to_order_but_unsure_about_postage_costs">To lure customers who want to order but unsure about postage costs.</string>
  <string name="promotion_performance">Promotion Performance</string>
  <string name="gross_revenue">Gross revenue</string>
  <string name="discount_target">Discount Target</string>
  <string name="promotion_details">Promotion Details</string>
  <string name="discount_conditions">Discount Conditions</string>
  <string name="discount_value">Discount Value</string>
  <string name="minimum_order">Minimum Order</string>
  <string name="days">Days</string>
  <string name="time">Time</string>
  <string name="customers_criteria">Customers criteria</string>
  <string name="maximum_customer">Maximum customer</string>
  <string name="title_activity_order">Order</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>
  <string name="home_second">Home Second</string>
  <string name="nguyenvana_gmail_com">nguyenvana@gmail.com</string>
  <string name="enter_your_registered_email_or_phone_number_to_sign_in">Enter your registered email or phone number to sign in</string>
  <string name="enter_email"> Enter Email*</string>
  <string name="enter_password">Enter Password*</string>
  <string name="password_placeholder">*******</string>
  <string name="sign_in">Sign In</string>
</resources>