<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="10dp"
    tools:context=".Ui.AuthScreen.SignInFragment">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:text="@string/sign_in"
        android:textColor="@color/titleTextColor"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_your_registered_email_or_phone_number_to_sign_in"
        android:textColor="@color/textColorPrimary"
        android:textSize="17sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/enter_email"
        android:textColor="@color/titleTextColor" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/layout_border_item_size5"
        android:backgroundTint="@color/whitesmoke"
        android:hint="@string/nguyenvana_gmail_com"
        android:paddingStart="10dp"
        android:textColor="@color/gray"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/enter_password"
        android:textColor="@color/titleTextColor"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/enterPassword"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/layout_border_item_size5"
        android:backgroundTint="@color/whitesmoke"
        android:hint="@string/password_placeholder"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textColor="@color/gray"
        tools:ignore="RtlSymmetry" />
  </LinearLayout>

  <Button
      android:id="@+id/signInButton"
      style="@style/ButtonStyle"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:text="@string/sign_in"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>